--- a/aulas/aula06/ex002.html
+++ b/aulas/aula06/ex002.html
@@ -7,7 +7,7 @@
     <title>Aula 04 JS</title>
     <style>
         body{
-            background-color: rgb(65, 65, 248);
+            background-color: rgb(227, 116, 255);
             color: white;
             font: normal 1em Arial;
         }
@@ -21,8 +21,10 @@
     <p>primeiro codigo em js</p>
     <script>
 
-       var nome =  window.prompt('Qual seu nome?')
-       window.alert('é um grande prazer de conhecer, ' + nome + '!' )
+      var n1 = Number(window.prompt('Digite um número:'))
+      var n2 = Number(window.prompt('Digite um número:'))
+      var s = n1 + n2
+      window.alert(`a soma entre ${n1} e ${n2} é ${s}`)
         
 
     </script>
